--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
       <div class="result">
         <dl>
          <div>
-            <dd>
+            <dt>
               Tip amount
               <small>/ person</small>
-            </dd>
-            <dt data-tip-amount>
-              $0.00
             </dt>
+            <dd data-tip-amount>
+              $0.00
+            </dd>
          </div>
          <div>
-            <dd>
+            <dt>
               Total
               <small>/ person</small>
-            </dd>
-            <dt data-total-amount>
-              $0.00
             </dt>
+            <dd data-total-amount>
+              $0.00
+            </dd>
          </div>
         </dl>
 
